[package]
name = "realtor_query"
version = "0.1.0"
authors = ["bobahop <bobahop@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#easy-http-request = "0.2.9"
reqwest = { version = "0.10", features = ["blocking", "cookies"] }
serde = {version = "1.0.116", features = ["derive"]}
serde_json = "1.0.57"
rand = "0.7.3"
chrono = "0.4.15"
regex = "1.3.9"
