[package]
name = "realtor_query"
version = "0.1.0"
authors = ["bobahop <bobahop@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.14", features = ["blocking", "cookies"] }
serde = {version = "1.0.152", features = ["derive"]}
serde_json = "1.0.93"
rand = "0.8.5"
chrono = "0.4.23"
regex = "1.7.1"